--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@pbs/shared": "workspace:*",
+    "@pbs/shared": "file:../shared",
     "@types/express": "^4.17.21",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
