--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build:pkg": "tsc -p tsconfig.pkg.json && npx pkg dist-pkg/index.js --targets node18-win-x64 --output ../release/PBSEditor.exe"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@pbs/shared": "file:../shared",
     "@types/express": "^4.17.21",
+    "pkg": "^5.8.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
