UX: pokemon.txt and pokemon_forms.txt

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -p tsconfig.json && vite build",
+    "build:tsc": "tsc -p tsconfig.json",
     "preview": "vite preview"
   },
   "dependencies": {
